* Fix UI bug that has all level 2 menu items bolded as current * Numbered li's are colored as regular text and not as the numbers * Added ellipsis text wrapping to docked TOC

--- a/src/documents/styles/components/article.less
+++ b/src/documents/styles/components/article.less
@@ -35,13 +35,22 @@
   }
   ul li, ol li {
     color: #1676a6;
+    p {
+      color: #4D4D4D;
+    }
   }
   ul ul li, ul ol li, ol ul li, ol ol li {
     color: #4590A5;
+    p {
+      color: #4D4D4D;
+    }
   }
 
   ul ul ul li, ul ul ol li, ul ol ol li, ul ol ul li, ol ol ol li, ol ul ul li, ol ol ul li, ol ul ol li {
     color: #666666;
+    p {
+      color: #4D4D4D;
+    }
   }
   pre {
     margin-top: 20px;
